--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# temp files and uploads
+/temp
+/uploads
+
 # vercel
 .vercel
 
